--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Qudo
 
+0.01_03
+   2009-11-21
+        - FIXED: Makefile.pl (add:Class::Data::Inheritable. thanks Andreas J. Koenig)
+
 0.01_02
    2009-11-12
         - ADD: Job status Table for MySQL.
