Import of NEKOKAK/Qudo-0.0207 from CPAN.
gitpan-cpan-distribution: Qudo
gitpan-cpan-version:      0.0207
gitpan-cpan-path:         NEKOKAK/Qudo-0.0207.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl extension Qudo
 
+0.0207
+   2010-06-02
+        - REMOVE: Qudo#job_list method. [INCOMPATIBLE CHANGE]
+        - MOD: Driver::Skinny#find_job and Driver::Skinny#lookup_job method logic for dry.
+        - MOD: do not use by Manager#can_do method [INCOMPATIBLE CHANGE]
+        - MOD: Manager#global_(un)register_hook method is deprecated. Use (un)register_hook method instead. [INCOMPATIBLE CHANGE]
+        - MOD: Worker#work_safly is not necessary manager instance.
+        - FIXED: Manager#lookup method require db argument.
+        - MOD: set job_status by job failed case.
+
 0.0206
    2010-06-02
         - tuning find_job method.
