--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Qudo
 
+0.0208
+   2010-06-03
+        - ADD: Job#abort method.
+        - MOD: can pass the option for plugins.
+        - MOD: remove doc/ dir qudo schema written for Qudo::Test's DATA section.
+        - ADD: qudo initial setup script.
+
 0.0207
    2010-06-02
         - REMOVE: Qudo#job_list method. [INCOMPATIBLE CHANGE]
